--- a/fashion-zookeeper/pom.xml
+++ b/fashion-zookeeper/pom.xml
@@ -2,10 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.fashion</groupId>
-    <artifactId>fashion-redis</artifactId>
+
+    <parent>
+        <artifactId>fashion-study</artifactId>
+        <groupId>com.fashion</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>fashion-zookeeper</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>fashion-redis</name>
+    <name>fashion-zookeeper</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -16,10 +22,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -35,32 +37,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>3.13.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
-        <!-- mysql:mysql驱动 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <!-- mysql:阿里巴巴数据库连接池 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.12</version>
         </dependency>
     </dependencies>
 
@@ -93,7 +69,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.0.RELEASE</version>
                 <configuration>
-                    <mainClass>com.fashion.redis.FashionRedisApplication</mainClass>
+                    <mainClass>com.fashion.zookeeper.FashionZookeeperApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
